# eatwell

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  Dockerfile  README.md  fly.toml  pyproject.toml
app/: auth.py  barcode.py  categories.py  config.py  db.py  deps.py  main.py  models.py  openrouter.py  qa_seed.py  schemas.py  storage.py  usda.py
app/routers/: analyze.py  auth.py  entries.py  exercise.py  foods.py  metrics.py  targets.py  trends.py
docs/: BACKLOG.md  COMMERCIAL_READINESS.md  PRODUCT_MATURITY_ROADMAP.md  PRODUCT_OPPORTUNITIES.md
scripts/: pull-prod-db.sh  seed_qa_data.py
tests/: conftest.py  test_analyze.py  test_analyze_activity.py  test_analyze_menu.py  test_analyze_text.py  test_auth.py  test_barcode.py  test_categories.py  test_entries.py  test_exercise.py  test_foods.py  test_metrics.py  test_migration.py  test_qa_seed.py  test_targets.py  test_trends.py  test_usda.py
web/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: app-smoke.spec.ts  global-setup.ts  qa-auth.ts  record-app.spec.ts  screenshot-app.spec.ts
web/scripts/: auditCategories.ts  buildFoodIconContactSheets.mjs
web/src/: App.tsx  index.css  main.tsx
web/src/api/: auth.ts  client.ts  entries.ts  estimate.ts  exercise.ts  foods.ts  metrics.ts  targets.ts  trends.ts
web/src/components/: AddExercise.tsx  AppIcon.tsx  BarcodeScanner.tsx  CalorieValue.tsx  ChoiceScanResults.tsx  DailyTotals.tsx  DayPicker.tsx  DensityBadge.tsx  EnergySummary.tsx  EntryList.tsx  EntryRow.tsx  EstimateCard.tsx  ExerciseSection.tsx  FoodIcon.tsx  FullnessBadge.tsx  GoalProgress.tsx  LoginPage.tsx  (+21 more)
(+56 files in other folders)
