[project]
name = "calorie-tracker"
version = "0.1.0"
description = "Snap a photo of food, estimate calories + macros via OpenRouter, log it."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "openai>=1.40",
    "httpx>=0.27",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "pillow>=10.4",
    "pillow-heif>=0.18",
    "google-auth>=2.53.0",
    "pyjwt>=2.13.0",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
